# Polyscript

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build-docs.sh  build.rs  cpp_polyscript.sln  test.ps  vip-manifest.rc
Polyscript/: BaseFunction.cpp  BaseFunction.h  BinOpNode.cpp  BinOpNode.h  BreakNode.cpp  BreakNode.h  BuiltInFunction.cpp  BuiltInFunction.h  Context.cpp  Context.h  ContinueNode.cpp  ContinueNode.h  DotAccessNode.cpp  DotAccessNode.h  Enum.cpp  Enum.h  EnumNode.cpp  EnumNode.h  EnumValue.cpp  EnumValue.h  ExpectedCharError.cpp  ExpectedCharError.h  Float.cpp  Float.h  ForNode.cpp  ForNode.h  FuncCallNode.cpp  FuncCallNode.h  FuncDefNode.cpp  FuncDefNode.h  Function.cpp  Function.h  IfNode.cpp  IfNode.h  IllegalCharError.cpp  IllegalCharError.h  ImportNode.cpp  ImportNode.h  Integer.cpp  Integer.h  (+85 more)
TESTS/UnitTest/: UnitTest.cpp  UnitTest.vcxproj
all/: CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
cpp/: .gitignore  CMakeLists.txt  build-docs.sh
cpp/.github/workflows/: style.yaml
cpp/documentation/: CMakeLists.txt
cpp/documentation/pages/: about.dox
cpp/include/vip/: vip.hpp
cpp/spec/: vip.md
cpp/spec/targets/: chip8.md
cpp/src/: vip.cpp
cpp/src/ast/: Block.cpp  (+29 more)
cpp/standalone/: CMakeLists.txt
cpp/standalone/src/: main.cpp  utils.cpp  utils.hpp
cpp/standalone/src/commands/: compiler.cpp  compiler.hpp  interpreter.cpp  interpreter.hpp
cpp/standalone/src/extentions/jit/: println.hpp
cpp/standalone/src/utils/: string.cpp
cpp/test/: CMakeLists.txt
cpp/test_files/: chip8.vip  count.vip  count_chip8.vip
documentation/: CMakeLists.txt
include/vip/: vip.hpp
resources/: Version.rc  icon.rc  manifest.rc
rust/: Cargo.toml  vip.exe.manifest
rust/src/: errors.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  runner.rs
rust/testcode/: function.vip  test.vip
src/: config.rs  errors.rs  interpreter.rs  lexer.rs  main.cpp  main.rs  parser.rs  shared.rs  vip.cpp
src/ast/: BinaryExpression.cpp  BinaryExpression.hpp  ExpressionStatement.cpp  ExpressionStatement.hpp  FunctionDeclaration.cpp  FunctionDeclaration.hpp  Identifier.cpp  Identifier.hpp  IfStatement.cpp  IfStatement.hpp  Node.cpp  Node.hpp  NumericLiteral.cpp  NumericLiteral.hpp  Parameter.hpp  Parser.cpp  Parser.hpp  Program.hpp  VariableDeclaration.cpp  VariableStatement.cpp
src/errors/: error.rs  mod.rs
src/helpers/: Node.cpp  Node.hpp  Token.hpp
src/interpreter/: mod.rs
src/lexer/: mod.rs
src/parser/: mod.rs  node.rs
src/shared/: context.rs  mod.rs  postion.rs  result.rs  scope.rs  token.rs  token_type.rs
src/standard_lib/: fs.rs  http.rs  io.rs  mod.rs
src/tokenizer/: Token.hpp
src/types/: builtins.rs  mod.rs  traits.rs  typedefs.rs  variabledef.rs
standalone/src/: main.cpp
test/src/: vip.cpp
testcode/: function.vip  test.vip
(+66 files in other folders)
